--- a/packages/ossa/src/style/index.scss
+++ b/packages/ossa/src/style/index.scss
@@ -36,3 +36,4 @@
 @import './components/row.scss';
 @import './components/col.scss';
 @import './components/swipe-cell.scss';
+@import './components/timeline.scss';
